k8s/registry/02-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-tobys-cloud
  namespace: registry
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
      - registry.tobys.cloud
      secretName: registry-tobys-cloud-tls
  rules:
  - host: registry.tobys.cloud
    http:
      paths:
      - backend:
          serviceName: registry-tobys-cloud-docker-registry
          servicePort: 5000
...
